@@ -1,3 +1,10 @@
+Sun, Nov 11, 2007 Daniel R Fisher
+1.  Fixed a memory leak in CambridgeThreeBodyJastrow.  Arrays for
+    powers of the distances and other temp variables were being
+    allocated and not deleted.  This was a problem for optimization
+    runs because several Jastrows are created and evaluated at once.
+2.  Changed the objective function in QMCEquilibrationArray.
+
 Wed, Nov 7, 2007 Amos Anderson
 1.  I improved the performance of the 3 body jastrow parameter derivative calculations.
     In QMCThreeBodyJastrow::packageDerivatives, the code will accumulate some of the
